files removed from src

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -137,6 +137,7 @@
           </p>
         </div>
       </div>
+       <small><a href="https://github.com/Pkhatamgooya/Finalproject" target="_blank">Open-source code</a>, by Porooshat K</small>
     </div>
   </div>
   <script src="src/script.js">
