fixed some issues

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="src/styles.css" />
+  <link rel="stylesheet" href="finalproject/style.css" />
 
   <script src="https://kit.fontawesome.com/ea0b1efcd6.js" crossorigin="anonymous"></script>
 
@@ -137,10 +137,9 @@
           </p>
         </div>
       </div>
-       <small><a href="https://github.com/Pkhatamgooya/Finalproject" target="_blank">Open-source code</a>, by Porooshat K</small>
     </div>
   </div>
-  <script src="src/script.js">
+  <script src="finalproject/script.js">
   </script>
 </body>
 
