added open source link

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
           </p>
         </div>
       </div>
+      <small><a href="https://github.com/Pkhatamgooya/SCWEATHERAPP" target="_blank">Open-source code</a>, by Porooshat</small>
     </div>
   </div>
   <script src="finalproject/script.js">
